    structure. This caused perdition to segmentation fault when
    the outgoing_server option was used. Thanks to Simon Matter
    discovering this.
  - Fixed bug where user-supplied username was used for db lookup
    rather than the key derived from the query_string option
    if it is supplied. Roland Rosenfel
  - Added missing documentation. paricularly for pid_file
    and ssl_ca_* options

----------------------------------------------------------------------

15th December 2003
(Horms)
   * 1.12
   - Debian and Red Hat package's init script will run perdition by default
     (previously /etc/default/perdition / /etc/sysconfig/perdition needed 
      to be edited to enable perdition)
   - Updated init information in man page
   - Fixed configure.in so --disable-ssl should actually work
   - Tidied up naming of logging macros
   - Fixed output of makebdb -u
   - makebdb recreated database rather than adding to it
   - bdb module no longer appends a spurious "\0" to keys
   - Better logging of failed gethopstbyname() and gethostbyaddr() calls
   - Strip trailing whitespace from configuration parameters
   - Mysql module now works with multiple query keys.
     Previously it would only ever try the first query key.
     Jeremy Rumpf
   - Make popmap Makefile more portable. Pascal Schumacher and Horms
   - Clarify the way that multiple LDAP servers works. Jeremy Rumpf
   - Removed line from man page stating that TLS isn't supported - it is.
   - Handle excaped characters in IMAP quoted strings correctly.
     Rob Mueller, Jeremy Howard and Horms
   - Handle spaces in POP passwords.
     Rob Mueller, Kurian Aerthail, Jeremy Howard and Horms
   - Make includes in log.h work outside the perdition tree. Mark D. Roth
   - Postgress module returns correct value (-2) if user can't be found.
     This allows query strings to work correctly. Timur Khanjanov
   - SSL Certificate Chain file may be used - Frederic Garzon