@@ -251,7 +251,7 @@
 # Chain file containing Certificate Authorities to use when 
 # verifying certificates. Overrides ssl_ca_file and ssl_ca_path
 # (default "")
-#ssl_chain_file A/etc/perdition/perdition.ca.pem
+#ssl_ca_chain_file A/etc/perdition/perdition.ca.pem
 
 # ssl_ca_file FILENAME:
 # File containing Certificate Authorities to use when verifying certificates.
