@@ -301,6 +301,8 @@ int options(int argc, char **argv, flag_t f){
       TAG_NO_DAEMON},
     {"ssl_mode",                    '\0', POPT_ARG_STRING, NULL, 
       TAG_SSL_MODE },
+    {"ssl_ca_chain_file",           '\0', POPT_ARG_STRING, NULL, 
+      TAG_SSL_CA_CHAIN_FILE },
     {"ssl_ca_file",                 '\0', POPT_ARG_STRING, NULL, 
       TAG_SSL_CA_FILE },
     {"ssl_ca_path",                 '\0', POPT_ARG_STRING, NULL, 
@@ -317,8 +319,6 @@ int options(int argc, char **argv, flag_t f){
       TAG_SSL_CERT_ACCEPT_SELF_SIGNED },
     {"ssl_cert_verify_depth",       '\0', POPT_ARG_STRING, NULL, 
       TAG_SSL_CERT_VERIFY_DEPTH },
-    {"ssl_certificate_chain_file",  '\0', POPT_ARG_STRING, NULL, 
-      TAG_SSL_CHAIN_FILE },
     {"ssl_key_file",                '\0', POPT_ARG_STRING, NULL, 
       TAG_SSL_KEY_FILE },
     {"ssl_listen_ciphers",          '\0', POPT_ARG_STRING, NULL, 
@@ -430,7 +430,7 @@ int options(int argc, char **argv, flag_t f){
     opt_i(opt.ssl_cert_verify_depth, DEFAULT_SSL_CERT_VERIFY_DEPTH,
 		                                            i, 0, OPT_NOT_SET);
     opt_p(opt.ssl_key_file,    DEFAULT_SSL_KEY_FILE,        i, 0, OPT_NOT_SET);
-    opt_p(opt.ssl_chain_file,  DEFAULT_SSL_CHAIN_FILE,      i, 0, OPT_NOT_SET);
+    opt_p(opt.ssl_ca_chain_file, DEFAULT_SSL_CA_CHAIN_FILE, i, 0, OPT_NOT_SET);
     opt_p(opt.ssl_listen_ciphers, DEFAULT_SSL_LISTEN_CIPHERS,
 		                                            i, 0, OPT_NOT_SET);
     opt_p(opt.ssl_outgoing_ciphers, DEFAULT_SSL_OUTGOING_CIPHERS,
@@ -689,12 +689,14 @@ int options(int argc, char **argv, flag_t f){
 	NO_SSL_OPT("ssl_ca_verify_depth");
 #endif /* WITH_SSL_SUPPORT */
       break;
-      case TAG_SSL_CHAIN_FILE:
+      case TAG_SSL_CA_CHAIN_FILE:
 #ifdef WITH_SSL_SUPPORT
-        opt_p(opt.ssl_chain_file,optarg,opt.ssl_mask,MASK_SSL_CHAIN_FILE,f);
+        opt_p(opt.ssl_ca_chain_file,optarg,opt.ssl_mask,
+			MASK_SSL_CA_CHAIN_FILE,f);
 #else /* WITH_SSL_SUPPORT */
       PERDITION_DEBUG(
-	"--ssl_chain_file is only supported when ssl support is compiled in");
+	"--ssl_ca_chain_file is only supported when ssl support "
+	"is compiled in");
       if(f&OPT_ERR){
         usage(-1);
       }
@@ -1337,8 +1339,8 @@ void usage(int exit_status){
 #ifdef WITH_SSL_SUPPORT
     ,
     OPT_STR(NULL),
-    OPT_STR(DEFAULT_SSL_CHAIN_FILE),
-    OPT_STR(RECOMENDED_SSL_CHAIN_FILE),
+    OPT_STR(DEFAULT_SSL_CA_CHAIN_FILE),
+    OPT_STR(RECOMENDED_SSL_CA_CHAIN_FILE),
     OPT_STR(DEFAULT_SSL_CA_FILE),
     OPT_STR(RECOMENDED_SSL_CA_FILE),
     OPT_STR(DEFAULT_SSL_CA_PATH),
