@@ -140,13 +140,14 @@
 #define DEFAULT_QUERY_KEY                    NULL
 #define DEFAULT_QUIET                        0
 #ifdef WITH_SSL_SUPPORT
+#define DEFAULT_SSL_CA_CHAIN_FILE            NULL
+#define RECOMENDED_SSL_CA_CHAIN_FILE         PERDITION_SYSCONFDIR \
+					     "/perdition.ca.pem"
 #define DEFAULT_SSL_CA_FILE                  NULL
 #define RECOMENDED_SSL_CA_FILE               PERDITION_SYSCONFDIR \
                                              "/perdition.ca.pem"
 #define DEFAULT_SSL_CA_PATH                  PERDITION_SYSCONFDIR \
                                              "/perdition.ca/"
-#define DEFAULT_SSL_CHAIN_FILE               NULL
-#define RECOMENDED_SSL_CHAIN_FILE            RECOMENDED_SSL_CA_FILE
 #define DEFAULT_SSL_CA_ACCEPT_SELF_SIGNED    0
 #define DEFAULT_SSL_CERT_FILE                PERDITION_SYSCONFDIR \
 					     "/perdition.crt.pem"
@@ -206,6 +207,7 @@ typedef struct {
   vanessa_dynamic_array_t *query_key;
   flag_t          mask;
   flag_t          mask2;
+  char            *ssl_ca_chain_file;
   char            *ssl_ca_file;
   char            *ssl_ca_path;
   int             ssl_ca_accept_self_signed;
@@ -215,7 +217,6 @@ typedef struct {
   int             ssl_cert_accept_not_yet_valid;
   int             ssl_cert_verify_depth;
   char            *ssl_key_file;
-  char            *ssl_chain_file;
   int             ssl_mode;
   char            *ssl_listen_ciphers;
   char            *ssl_outgoing_ciphers;
@@ -265,15 +266,15 @@ typedef struct {
 
 #ifdef WITH_SSL_SUPPORT
 /* options_t.ssl_mask entries */
-#define MASK_SSL_CA_FILE                       (flag_t) 0x00000001
-#define MASK_SSL_CA_PATH                       (flag_t) 0x00000002
-#define MASK_SSL_CA_ACCEPT_SELF_SIGNED         (flag_t) 0x00000004
-#define MASK_SSL_CERT_FILE                     (flag_t) 0x00000008
-#define MASK_SSL_CERT_ACCEPT_EXPIRED           (flag_t) 0x00000010
-#define MASK_SSL_CERT_ACCEPT_NOT_YET_VALID     (flag_t) 0x00000020
-#define MASK_SSL_CERT_ACCEPT_SELF_SIGNED       (flag_t) 0x00000040
-#define MASK_SSL_CERT_VERIFY_DEPTH             (flag_t) 0x00000080
-#define MASK_SSL_CHAIN_FILE                    (flag_t) 0x00000100
+#define MASK_SSL_CA_CHAIN_FILE                 (flag_t) 0x00000001
+#define MASK_SSL_CA_FILE                       (flag_t) 0x00000002
+#define MASK_SSL_CA_PATH                       (flag_t) 0x00000004
+#define MASK_SSL_CA_ACCEPT_SELF_SIGNED         (flag_t) 0x00000008
+#define MASK_SSL_CERT_FILE                     (flag_t) 0x00000010
+#define MASK_SSL_CERT_ACCEPT_EXPIRED           (flag_t) 0x00000020
+#define MASK_SSL_CERT_ACCEPT_NOT_YET_VALID     (flag_t) 0x00000040
+#define MASK_SSL_CERT_ACCEPT_SELF_SIGNED       (flag_t) 0x00000080
+#define MASK_SSL_CERT_VERIFY_DEPTH             (flag_t) 0x00000100
 #define MASK_SSL_KEY_FILE                      (flag_t) 0x00000200
 #define MASK_SSL_MODE                          (flag_t) 0x00000400
 #define MASK_SSL_LISTEN_CIPHERS                (flag_t) 0x00000800
@@ -294,15 +295,15 @@ typedef struct {
 #define TAG_NO_DAEMON                          (int) 131
 #define TAG_PID_FILE                           (int) 132
 #define TAG_QUERY_KEY                          (int) 133
-#define TAG_SSL_CA_FILE                        (int) 134
-#define TAG_SSL_CA_PATH                        (int) 135
-#define TAG_SSL_CA_ACCEPT_SELF_SIGNED          (int) 136
-#define TAG_SSL_CERT_FILE                      (int) 137
-#define TAG_SSL_CERT_ACCEPT_EXPIRED            (int) 138
-#define TAG_SSL_CERT_ACCEPT_SELF_SIGNED        (int) 139
-#define TAG_SSL_CERT_ACCEPT_NOT_YET_VALID      (int) 140
-#define TAG_SSL_CERT_VERIFY_DEPTH              (int) 141
-#define TAG_SSL_CHAIN_FILE                     (int) 142
+#define TAG_SSL_CA_CHAIN_FILE                  (int) 134
+#define TAG_SSL_CA_FILE                        (int) 135
+#define TAG_SSL_CA_PATH                        (int) 136
+#define TAG_SSL_CA_ACCEPT_SELF_SIGNED          (int) 137
+#define TAG_SSL_CERT_FILE                      (int) 138
+#define TAG_SSL_CERT_ACCEPT_EXPIRED            (int) 139
+#define TAG_SSL_CERT_ACCEPT_SELF_SIGNED        (int) 140
+#define TAG_SSL_CERT_ACCEPT_NOT_YET_VALID      (int) 141
+#define TAG_SSL_CERT_VERIFY_DEPTH              (int) 142
 #define TAG_SSL_KEY_FILE                       (int) 143
 #define TAG_SSL_MODE                           (int) 144
 #define TAG_SSL_LISTEN_CIPHERS                 (int) 145
